@startuml CDM_Jasaku
' ============================================================
' Conceptual Data Model (CDM) — Jasaku Platform
' Level: High-level entities & domain grouping
' No attributes shown — relationships & cardinalities only
' ============================================================

skinparam linetype ortho
skinparam backgroundColor #FEFEFE
skinparam defaultFontName "Segoe UI"
skinparam defaultFontSize 12
skinparam shadowing false

skinparam package {
  BackgroundColor<<domain>> #F0F4FF
  BorderColor<<domain>> #4A6FA5
  FontColor<<domain>> #2C3E50
  FontSize<<domain>> 14
  FontStyle<<domain>> bold
}

skinparam entity {
  BackgroundColor #FFFFFF
  BorderColor #4A6FA5
  FontColor #2C3E50
  FontSize 13
}

' ── DOMAIN: Authentication & User Management ────────────────
package "Autentikasi & Pengguna" <<domain>> {
  entity "Roles" as ROLES
  entity "Users" as USERS
  entity "User Devices" as USER_DEVICES
  entity "Profiles\nCustomer" as PROF_CUST
  entity "Provider\nProfiles" as PROF_PROV
  entity "Provider\nLocations" as PROV_LOC
  entity "Provider\nDocuments" as PROV_DOC
  entity "Provider\nPayout Methods" as PROV_PAYOUT
  entity "Identity\nVerifications" as ID_VERIF
}

' ── DOMAIN: Service Catalog ─────────────────────────────────
package "Katalog Layanan" <<domain>> {
  entity "Categories" as CATEGORIES
  entity "Pricing Types" as PRICING_TYPES
  entity "Services" as SERVICES
  entity "Provider\nServices" as PROV_SERV
  entity "Provider\nService Prices" as PROV_PRICE
}

' ── DOMAIN: Orders ──────────────────────────────────────────
package "Pesanan (Orders)" <<domain>> {
  entity "Orders" as ORDERS
  entity "Order Items" as ORD_ITEMS
  entity "Order\nLocations" as ORD_LOC
  entity "Order\nAttachments" as ORD_ATTACH
  entity "Order\nExtensions" as ORD_EXT
  entity "Provider\nSchedules" as PROV_SCHED
}

' ── DOMAIN: Payments ────────────────────────────────────────
package "Pembayaran" <<domain>> {
  entity "Payments" as PAYMENTS
  entity "Admin Bank\nAccounts" as ADMIN_BANK
  entity "Admin E-Wallet\nAccounts" as ADMIN_EWALLET
  entity "Admin QRIS\nAccounts" as ADMIN_QRIS
}

' ── DOMAIN: Custom Tasks ────────────────────────────────────
package "Custom Tasks (Tender)" <<domain>> {
  entity "Custom Tasks" as TASKS
  entity "Task Locations" as TASK_LOC
  entity "Task Providers" as TASK_PROV
}

' ── DOMAIN: Reviews & Reports ───────────────────────────────
package "Ulasan & Laporan" <<domain>> {
  entity "Reviews" as REVIEWS
  entity "Reports" as REPORTS
}

' ── RELATIONSHIPS ───────────────────────────────────────────

ROLES ||--o{ USERS : "memiliki role"
USERS ||--o| PROF_CUST : "punya profil customer"
USERS ||--o| PROF_PROV : "punya profil mitra"
USERS ||--o| PROV_LOC : "memiliki lokasi"
USERS ||--o{ USER_DEVICES : "terdaftar di"
USERS ||--o{ REPORTS : "mengirim laporan"
USERS ||--o{ REVIEWS : "menulis ulasan (customer)"
USERS ||--o{ REVIEWS : "menerima ulasan (mitra)"

PROF_PROV ||--o| ID_VERIF : "diverifikasi"
PROF_PROV ||--o{ PROV_DOC : "mengunggah dokumen"
PROF_PROV ||--o{ PROV_PAYOUT : "menyimpan metode pencairan"
PROF_PROV ||--o{ PROV_SERV : "menawarkan layanan"
PROF_PROV ||--o{ PROV_SCHED : "memiliki jadwal"
PROF_PROV ||--o{ TASK_PROV : "menerima tugas"
PROF_PROV ||--o{ ORDERS : "mengerjakan pesanan"

PROF_CUST ||--o{ ORDERS : "memesan layanan"

CATEGORIES ||--o{ PRICING_TYPES : "memiliki tipe harga"
CATEGORIES ||--o{ SERVICES : "memuat sub-layanan"
SERVICES ||--o{ PROV_SERV : "ditawarkan oleh mitra"
SERVICES ||--o{ ORD_ITEMS : "masuk dalam pesanan"
PRICING_TYPES ||--o{ PROV_PRICE : "ditetapkan harganya"

PROV_SERV ||--o{ PROV_PRICE : "punya daftar harga"
PROV_SERV ||--o{ ORD_ITEMS : "dipesan melalui"

ORDERS ||--|| PAYMENTS : "memiliki pembayaran"
ORDERS ||--o{ ORD_ITEMS : "memuat item"
ORDERS ||--o| ORD_LOC : "memiliki lokasi tujuan"
ORDERS ||--o{ ORD_ATTACH : "memiliki lampiran"
ORDERS ||--o{ ORD_EXT : "bisa diperpanjang"
ORDERS ||--o| PROV_SCHED : "memesan jadwal"
ORDERS ||--o| REVIEWS : "memiliki ulasan"
ORDERS }o--o| TASKS : "berasal dari custom task (opsional)"
ORDERS }o--o| TASK_PROV : "terkait penerima task (opsional)"

TASKS ||--o{ TASK_LOC : "memiliki titik lokasi"
TASKS ||--o{ TASK_PROV : "diterima oleh mitra"
TASKS ||--o{ ORDERS : "menghasilkan pesanan"

TASK_PROV ||--o{ ORDERS : "dikerjakan sebagai order"

PAYMENTS }o--o{ ADMIN_BANK : "metode: transfer bank"
PAYMENTS }o--o{ ADMIN_EWALLET : "metode: e-wallet"
PAYMENTS }o--o{ ADMIN_QRIS : "metode: QRIS"

' ── TITLE ──────────────────────────────────────────────────
title <b>CDM — Jasaku Platform</b>\nHome-Service Marketplace\n\n29 Entitas · 33 Relasi

footer Generated by PlantUML
@enduml
